2003-12-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatkstate.c, src/rbatkselection.c, 
	src/rbatkrelationset.c: Added. 

2003-12-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatknoopobjectfactory.c: Fix a wrong definition. 
	* src/rbatkimage.c, src/rbatkhypertext.c, rbatkhyperlink.c, 
	rbatkeditabletext.c, rbatkimplementor.c, rbatkobject.c,
	rbatkrelation.c, rbatkregistry.c, rbatkobjectfactory.c: Added. 

2003-12-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* atk/rbatkcomponent.c: Added.

2003-12-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* atk/*: Initial import. Added Atk::Action, Atk::Document, 
	Atk::GObjectAccessible, Atk::NoOpObject, Atk::NoOpObjectFactory, Atk::Value. 